Styling | Fixed Main Content Cross-Axis Flex Alignment

--- a/src/assets/sass/components/layout/Main.module.scss
+++ b/src/assets/sass/components/layout/Main.module.scss
@@ -46,9 +46,7 @@
         max-width: 100%;
         width: 100%;
         padding: 20px;
-        //overflow: hidden;
         display: flex;
-        align-items: center;
         justify-content: center;
         background: rgb(55, 55, 57)
     }
