--- a/src/assets/sass/components/sleep/graphs/SleepQualityPieChart.module.scss
+++ b/src/assets/sass/components/sleep/graphs/SleepQualityPieChart.module.scss
@@ -1,4 +1,4 @@
 .label {
     font-size: 40px;
-    font-weight: 600;
+    font-weight: 700;
 }
